--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,28 @@ body {
     transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
-/* Hide full nav by default on small screens */
 @media (max-width: 640px) {
     .top-nav {
-        width: 100%;
-        border-radius: 0;
+        height: 3rem; /* smaller height */
+        max-width: 20rem; /* slightly narrower bar */
+        padding: 0 1rem; /* less horizontal padding */
+        overflow: hidden;
+    }
+
+    .nav-text {
+        display: none;
+    }
+
+    .nav-link {
+        padding: 0.20rem;
+        justify-content: center;
     }
 }
+
+@media (max-width: 400px) {
+    /*TODO:*/
+}
+
 
 /* When header is condensed (scroll down), show toggle and hide full nav */
 header.condensed .nav-full {
