--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ header.condensed.top-nav {
     background: rgba(255, 255, 255, 0.25);
 }
 
-/* RESPONSIVE STACK ON SMALL SCREENS */
+/* STACK ON SMALL SCREENS */
 @media (max-width: 768px) {
     .project-card {
         flex-direction: column;
@@ -495,6 +495,11 @@ header.condensed.top-nav {
     .github-button {
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .project-thumb,
+    .project-image {
+        display: none;
     }
 }
 
