--- a/css/style.css
+++ b/css/style.css
@@ -418,18 +418,24 @@ header.condensed.top-nav {
 
 .project-image {
     flex-shrink: 0;
-    width: 240px;
+    width: 300px;
     height: auto;
+    margin-block: auto;
     border-radius: 1rem;
     overflow: hidden;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+    align-items: center;
+
+    display: flex;
+    align-self: center;
+    justify-content: center;
 }
 
 .project-image img {
     width: 100%;
     height: auto;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 1rem;
 }
 
@@ -493,6 +499,11 @@ header.condensed.top-nav {
 .tech-icons iconify-icon {
     width: 24px;
     height: 24px;
+    margin-right: 15px;
+}
+
+.tech-icons iconify-icon:last-child {
+    margin-right: 0;
 }
 
 /* GITHUB BUTTON */
