--- a/css/style.css
+++ b/css/style.css
@@ -190,14 +190,14 @@ header.condensed.top-nav {
     pointer-events: none;
 }
 
-.home-bg::after {
+/*.home-bg::after {
     content: '';
     position: absolute;
     top: 0; left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
-}
+}*/
 
 .intro {
     max-width: 600px;
