--- a/css/style.css
+++ b/css/style.css
@@ -190,15 +190,6 @@ header.condensed.top-nav {
     pointer-events: none;
 }
 
-/*.home-bg::after {
-    content: '';
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.2);
-}*/
-
 .intro {
     max-width: 600px;
     padding: 2rem;
@@ -285,7 +276,7 @@ header.condensed.top-nav {
 /* MAIN CONTENT */
 .main-content {
     padding-top: 60px; /* space for nav */
-    background: #2c5565 /* #295267 */ /* 294b5b */;
+    background: #2a5066 /* #295267 */ /* 294b5b */;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     padding-bottom: 4rem;
