--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ header.condensed.top-nav {
 /* MAIN CONTENT */
 .main-content {
     padding-top: 60px; /* space for nav */
-    background: #2a5066 /* #295267 */ /* 294b5b */;
+    background: #325267 /* #295267 */ /* 294b5b */;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     padding-bottom: 4rem;
