--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ header.condensed.top-nav {
 }
 
 .intro-heading {
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 .intro-heading.animate-in,
